--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   json_serializable: ^6.8.0
   freezed_annotation: ^2.4.4
   freezed: ^2.5.7
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
